--- a/src/Plugins/SmartStore.MegaMenu/Content/smartstore.megamenu.css
+++ b/src/Plugins/SmartStore.MegaMenu/Content/smartstore.megamenu.css
@@ -1,30 +1,67 @@
-﻿
-.megamenu-container {
+﻿.megamenu-container {
     position: relative;
 }
 .megamenu {
     overflow: hidden;
     position: relative;
 }
+/*
 .show-scroll-buttons .megamenu .nav-slider {
     margin: 0 20px;
 }
+*/
 .megamenu ul.nav {
     width: 5000px;
 }
-.megamenu-navigate-prev,
-.megamenu-navigate-next {
+.megamenu-nav-btn i {
+    font-size:          38px;
+    -webkit-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition:         all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    height: 56px;
+    line-height: 56px;
+    vertical-align: middle;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+}
+.megamenu-nav-btn i:hover {
+    font-size: 64px;
+} 
+.megamenu-navigate-prev a {
+    padding-right: 10px;
+    padding-top: 0;
+}
+.megamenu-navigate-next a {
+    padding-left: 10px;
+    padding-top: 0;
+}
+.megamenu-nav-btn {
     position: absolute;
     top: 0;
 }
+.megamenu-nav-btn .btn {
+    border: none;
+    box-shadow: none;
+    position: relative;
+    z-index: 10000;
+}
+.megamenu-navigate-prev .btn:active:focus,
+.megamenu-navigate-prev .btn {
+    background: -webkit-linear-gradient(right, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
+}
+.megamenu-navigate-next .btn:active:focus,
+.megamenu-navigate-next .btn {
+    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
+}
+.megamenu-navigate-prev {
+    display:none;
+}
 .megamenu-navigate-next {
     right: 0;
-}
-.megamenu-navigate-prev .btn,
-.megamenu-navigate-next .btn {
-    padding: 0;
-    font-size: 1.2rem;
-}
+}     
+
+
 .megamenu-container .megamenu-dropdown-container {
     position: relative;
 }
@@ -79,6 +116,22 @@
     color: #464646;
     font-size: .825rem;
 }
+.inline-container .mega-menu-subitem {
+    font-size: .8125rem;
+    line-height: .875rem; /* TODO: 16px || 18px  */
+}
+.inline-container .mega-menu-subitem:hover {
+    text-decoration: underline;
+}
+.mega-menu-subitem-wrap {
+    white-space: nowrap;
+}
+.inline-container {
+    line-height: 1.6rem;
+}
+.empty {
+    margin-bottom: -1rem;
+}
 .megamenu-container .comma-separated .mega-menu-subitem {
     display: inline;
     margin-right: -.15rem;
@@ -90,15 +143,6 @@
 .megamenu-container .comma-separated .mega-menu-subitem.more-link {
     display: block;
 }
-
-.megamenu-container .picture-container {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-
-
-
 .megamenu-container .comma-separated .mega-menu-subitem:focus, 
 .megamenu-container .comma-separated .mega-menu-subitem:hover {
     background-color: transparent;
@@ -109,11 +153,15 @@
     max-height: 100%;
     padding: 20px;
 }
+.megamenu-container .picture-container {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
 .megamenu-container .below-preview-pic-text {
     margin: 10px;
     font-size: .875rem;
 }
-
 .megamenu-container .megamenu-html-text {
     overflow: hidden;
 }
@@ -122,8 +170,8 @@
     padding: 0;
 }
 .megamenu-container .nav-item,
-.megamenu-navigate-prev,
-.megamenu-navigate-next {
+.megamenu-navigate-prev a,
+.megamenu-navigate-next a {
     padding: .5rem 0;
 }
 .megamenu ul.nav .nav-item {
@@ -146,6 +194,7 @@
 }
 
 
+/* Product rotator */
 .megamenu-container .nav-item.active:before {
     content: "";
     left: 50%;
@@ -168,23 +217,25 @@
     margin-left: -19px;
     z-index: 1008;
 }
-
+.rotator-content > div.placeholder {
+    height: 290px;
+    background-color: rgba(255,255,255, 0.85);
+}
+.rotator-content > div.placeholder.empty {
+    background-color: transparent;
+}
 .mega-menu-product-rotator .pl-row,
 .mega-menu-product-rotator .item-box {
     width: 100%;
     border: none;
 }
-
 .mega-menu-product-rotator.scroll article {
     min-width: 245px;
     max-width: 245px;
 }
-
-
 .mega-menu-product-rotator.scroll .btn-group {
     width: 100%;
 }
-
 .mega-menu-product-rotator.scroll .scroll-button {
     bottom: 12px;
     top: initial !important;
@@ -192,21 +243,4 @@
 }
 .mega-menu-product-rotator.scroll .scroll-button i {
     width: initial;
-}
-
-
-.megamenu-navigate-next .btn,
-.megamenu-navigate-prev .btn {
-    border: none;
-    box-shadow: none;
-    position: relative;
-    z-index: 10000;
-}
-.megamenu-navigate-prev .btn:active:focus,
-.megamenu-navigate-prev .btn {
-    background: -webkit-linear-gradient(right, rgba(0,0,0,0), #f7f7f7 30%, #f7f7f7 100%);
-}
-.megamenu-navigate-next .btn:active:focus,
-.megamenu-navigate-next .btn {
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0), #f7f7f7 30%, #f7f7f7 100%);
 }
