--- a/src/Plugins/SmartStore.FacebookAuth/Content/facebookstyles.css
+++ b/src/Plugins/SmartStore.FacebookAuth/Content/facebookstyles.css
@@ -6,8 +6,8 @@
 	background: #405e94;
 }
 .btn.btn-facebook:hover {
-	background: #3a5587;
+	background: #3a5587 !important;
 }
 .btn.btn-facebook:active {
-	background: #344c79;
+	background: #344c79 !important;
 }
