--- a/src/Plugins/SmartStore.MegaMenu/Content/smartstore.megamenu.css
+++ b/src/Plugins/SmartStore.MegaMenu/Content/smartstore.megamenu.css
@@ -50,7 +50,7 @@
     box-shadow: none;
     position: relative;
     z-index: 10000;
-    height: 98%;
+    height: 100%;
 }
 .megamenu-nav--next {
     right: 0;
@@ -85,15 +85,12 @@
     color: #222;
     padding-bottom: .4rem;
 }
-
 .megamenu-container .mega-menu-dropdown-heading + .mega-menu-dropdown-heading {
     padding-top: .5rem;
 }
-
 .megamenu-container .mega-menu-dropdown-heading label {
     vertical-align: top;
 }
-
 .megamenu-container .mega-menu-subitem {
     font-size: .875rem;
     text-decoration: none;
@@ -103,35 +100,27 @@
 .megamenu-container .mega-menu-subitem:hover {
     color: #222;
 } 
-
 .megamenu-container .mega-menu-subitem.more-link {
     font-weight: bold;
     color: #464646;
     font-size: .825rem;
 }
-.inline-container .mega-menu-subitem {
+.megamenu-container .inline-container .mega-menu-subitem {
     font-size: .8125rem;
-    line-height: .875rem; /* TODO: 16px || 18px  */
+    line-height: .875rem;
 }
-.inline-container .mega-menu-subitem:hover {
+.megamenu-container .inline-container .mega-menu-subitem:hover {
     text-decoration: underline;
 }
 .mega-menu-subitem-wrap {
     white-space: nowrap;
 }
-.inline-container {
+.megamenu-container .inline-container {
     line-height: 1.6rem;
-}
-.empty {
-    margin-bottom: -1rem;
 }
 .megamenu-container .comma-separated .mega-menu-subitem {
     display: inline;
     margin-right: -.15rem;
-}
-.megamenu-container .comma-separated .mega-menu-subitem,
-.megamenu-container .comma-separated .comma { 
-
 }
 .megamenu-container .comma-separated .mega-menu-subitem.more-link {
     display: block;
@@ -141,34 +130,29 @@
     background-color: transparent;
     color: #888;
 }
-.megamenu-container .megamenu-cat-img img {
+.megamenu-dropdown-container .empty {
+    margin-bottom: -1rem;
+}
+.megamenu-dropdown-container .megamenu-cat-img img {
     max-width: 100%;
     max-height: 100%;
     padding: 20px;
 }
-.megamenu-container .picture-container {
+.megamenu-dropdown-container .picture-container {
     position: absolute;
     right: 0;
     bottom: 0;
 }
-.megamenu-container .below-preview-pic-text {
+.megamenu-dropdown-container .below-preview-pic-text {
     margin: 10px;
     font-size: .875rem;
 }
-.megamenu-container .megamenu-html-text {
+.megamenu-dropdown-container .megamenu-html-text {
     overflow: hidden;
 }
-
-.navbar {
+.megamenu-section .navbar {
     padding: 0;
 }
-
-/*
-.megamenu-container .nav-item {
-    xpadding: .5rem 0;
-}
-*/
-
 .megamenu .navbar-nav .nav-item + .nav-item {
     margin-left: 0;
 }
@@ -181,7 +165,6 @@
 .megamenu-container .nav-item:last-child .nav-link {
     padding-right: 0;
 }
-
 .megamenu ul.nav .nav-item {
     z-index: 1100;
     position: relative;
@@ -192,27 +175,23 @@
     top: 7px;
     font-size: 0.7rem;
 }
-
-
-
-.nav-slider {
+.megamenu .nav-slider {
     z-index: 3000;
 }
-
 .megamenu .megamenu-nav--next,
 .megamenu .megamenu-nav--prev {
     transition: opacity .5s ease-in-out .1s;
     opacity: 0;
     z-index: 3001;
 }
-
 .megamenu.megamenu--blend-next .megamenu-nav--next,
 .megamenu.megamenu--blend-prev .megamenu-nav--prev {
     opacity: 1;
 }
-
 .megamenu .megamenu-nav-btn {
     width: 1px;
+    padding: 0px;
+    transition: width .01s ease-in-out 1.5s;
 }
 .megamenu .megamenu-nav--prev .megamenu-nav-btn {
     background-image: linear-gradient(to left, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
@@ -220,64 +199,67 @@
 .megamenu .megamenu-nav--next .megamenu-nav-btn {
     background-image: linear-gradient(to right, rgba(0,0,0,0), #f7f7f7 40%, #f7f7f7 100%);
 }
-
 .megamenu.megamenu--blend-next .megamenu-nav--next .megamenu-nav-btn,
 .megamenu.megamenu--blend-prev .megamenu-nav--prev .megamenu-nav-btn {
     width: 40px;
-}
-    
+    transition: none;
+    height: 98%;
+} 
+
+.touch .megamenu-section .navbar:hover .megamenu-nav--prev i,
+.touch .megamenu-section .navbar:hover .megamenu-nav--next i,
 .megamenu .megamenu-nav i {
     color: #000;
     display: none;
 }
-/*
-TODO: nav-bar => megamenu-navbar
-*/
-.navbar:hover .megamenu-nav--prev i,
-.navbar:hover .megamenu-nav--next i  {
+.megamenu-section .navbar:hover .megamenu-nav--prev i,
+.megamenu-section .navbar:hover .megamenu-nav--next i  {
     display: block;
 }
 
 
 
-
 /* TODO: correct enum BadgeStyle, determine valid entries for bs4 */
-.label-important {
+.megamenu .label-important {
     background: #0275d8; /* $brand-primary */
 }
-.label-inverse {
+.megamenu .label-inverse {
     background: #d9534f; /* $brand-danger */
 }
 
 
-/* Product rotator */
+/* active state */
+.megamenu-container .nav-item:before,
+.megamenu-container .nav-item:after {
+	content: "";
+}
 .megamenu-container .nav-item.active:before {
     content: "";
-    left: 50%;
+    right: 0;
     position: absolute;
     border-bottom: 15px solid #fff;
     border-right: 17px solid transparent;
     border-left: 17px solid transparent;
     bottom: -1px;
-    margin-left: -17px;
     z-index: 1010;
 }
 .megamenu-container .nav-item.active:after {
     content: "";
-    left: 50%;
+    right: -2px;
     position: absolute;
     border-bottom: 17px solid #bbb;
     border-right: 19px solid transparent;
     border-left: 19px solid transparent;
     bottom: -2px;
-    margin-left: -19px;
     z-index: 1008;
 }
-.rotator-content > div.placeholder {
+
+/* Product rotator */
+.megamenu-container .rotator-content > div.placeholder {
     height: 290px;
     background-color: rgba(255,255,255, 0.85);
 }
-.rotator-content > div.placeholder.empty {
+.megamenu-container .rotator-content > div.placeholder.empty {
     background-color: transparent;
 }
 .mega-menu-product-rotator .pl-row,
@@ -301,3 +283,34 @@ TODO: nav-bar => megamenu-navbar
     width: initial;
 }
 
+
+
+
+
+.touch .megamenu .nav-slider {
+	overflow-x: auto !important;
+}
+
+.megamenu .nav:after {
+	/* clearfix simulieren */
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.megamenu .nav {
+	position: relative;
+	/* Nobreak */
+	white-space: nowrap;
+	/* überschreibt lediglich die Inline width-Angabe */
+	width: auto !important;
+	/* Transition */
+	transition: margin-left 0.12s ease-in-out;
+	margin-left: 0;
+}
+
+.megamenu .nav .nav-item {
+	/* Nobreak */
+	float: none !important;
+	display: inline-block;
+}
