Minor asset restructuring

--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -81,6 +81,7 @@ $card-border-color:         rgba(0,0,0, 0.12);*/
 @import "_rating.scss";
 @import "_product.scss";
 @import "_cart.scss";
+@import "_megamenu.scss";
 
 html {
     width: 100%;
