--- a/src/Plugins/SmartStore.FacebookAuth/Content/public.scss
+++ b/src/Plugins/SmartStore.FacebookAuth/Content/public.scss
@@ -1,4 +1,5 @@
-﻿
+﻿/// <reference path="../../../Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss" />
+
 /* Facebook
 ================================================ */
 
